# internal/dtos/add_to_cart.go
@@ -1,0 +1,5 @@
+package dtos
+
+type AddToCartResponse struct {
+	ID int64 `json:"id"`
+}
